fixed get started button styles on mobile devices

--- a/src/components/GetStarted.css
+++ b/src/components/GetStarted.css
@@ -84,7 +84,7 @@
 
   .getStarted__cta-btn {
     font-size: 1rem;
-    padding: 20px 14px;
-    height: 0;
+    /* padding: 20px 14px; */
+    height: 40px;
   }
 }
